--- a/IraFinanceAPP1/src/main/java/log4j.properties
+++ b/IraFinanceAPP1/src/main/java/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, file,errorfile,console,rollingAppender
+log4j.rootLogger=INFO, file,errorfile
 
   
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -13,19 +13,15 @@ log4j.appender.console.layout.conversionPattern=%d [%t] %-5p %c - %m%n
 
 
 
-log4j.rootLogger=DEBUG, RollingAppender
-log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingAppender.File=D:\\log\\new${Date}.log
-log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
-log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
+
 
 
 #Redirect to Tomcat logs folder
 #log4j.appender.file.File=${catalina.home}/logs/logging.log
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D:\\log\\logging%d{yyyy-MM-dd}.log
+log4j.appender.file.File=D:\\log\\logging.log
+log4j.appender.File.append=true 
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
