--- a/IraFinanceAPP1/src/main/java/log4j.properties
+++ b/IraFinanceAPP1/src/main/java/log4j.properties
@@ -22,7 +22,7 @@ log4j.appender.console.layout.conversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 
 
-log4j.appender.file.File=D:\\log\\logging.log
+log4j.appender.file.File=C:\\log\\logging.log
 log4j.appender.File.append=true 
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
@@ -33,7 +33,7 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
 
 log4j.appender.errorfile=org.apache.log4j.RollingFileAppender
 log4j.appender.errorfile.Threshold=ERROR
-log4j.appender.errorfile.File=D:\\log\\errorlogging.log
+log4j.appender.errorfile.File=C:\\log\\errorlogging.log
 log4j.appender.errorfile.MaxFileSize=10MB
 log4j.appender.errorfile.MaxBackupIndex=10
 log4j.appender.errorfile.layout=org.apache.log4j.PatternLayout
