--- a/IraFinanceAPP1/pom.xml
+++ b/IraFinanceAPP1/pom.xml
@@ -72,6 +72,32 @@
     <version>1.2.17</version>
 </dependency>
  
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.7</version>
+</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
+</dependency>
+    
+    <dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mailapi</artifactId>
+    <version>1.4.3</version>
+</dependency>
+
+<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>smtp</artifactId>
+    <version>1.4.5</version>
+</dependency>
+      
         
         
     </dependencies>
